// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminUsers /> should render correctly - index 1`] = `
<div>
  <div
    class="loading-cover__outer-container"
  >
    <div
      class="loading-cover__overlay"
    >
      <div
        class=""
      >
        <div
          class="skeleton__outer skeleton__section"
        >
          <div
            class="skeleton__shimmer"
            style="margin-left: -0px;"
          />
        </div>
        <div
          class="skeleton__outer skeleton__card--compact"
        >
          <div
            class="skeleton__shimmer"
            style="margin-left: -0px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with admin user 1`] = `
<div>
  <div>
    <a
      class="typography__main typography__link typography__link--text-link typography--no-padding typography--inline page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section page-title__section--with-link"
        id="admin-users"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      Reload users
    </button>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-bottom: 1rem;"
      type="button"
    >
      Show filters
    </button>
    <br />
    <br />
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="admin-users__card"
          href="/admin/users?highlight=new"
          role="button"
          style="text-decoration: none;"
        >
          <div
            class="card"
          >
            <div
              class="card__background"
              style="background-image: url(null);"
            />
            <div
              class="card__outer-container card__outer-container--padded"
            >
              <div
                class="typography__main typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography--no-padding"
                  id="new-+"
                >
                  New +
                </h2>
              </div>
            </div>
            <div
              class="card__banner"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with createError 1`] = `
<div>
  <div>
    <a
      class="typography__main typography__link typography__link--text-link typography--no-padding typography--inline page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section page-title__section--with-link"
        id="admin-users"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      Reload users
    </button>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-bottom: 1rem;"
      type="button"
    >
      Show filters
    </button>
    <br />
    <br />
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="admin-users__card"
          href="/admin/users?highlight=new"
          role="button"
          style="text-decoration: none;"
        >
          <div
            class="card"
          >
            <div
              class="card__background"
              style="background-image: url(null);"
            />
            <div
              class="card__outer-container card__outer-container--padded"
            >
              <div
                class="typography__main typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography--no-padding"
                  id="new-+"
                >
                  New +
                </h2>
              </div>
            </div>
            <div
              class="card__banner"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with creating=true 1`] = `
<div>
  <div>
    <a
      class="typography__main typography__link typography__link--text-link typography--no-padding typography--inline page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section page-title__section--with-link"
        id="admin-users"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      Reload users
    </button>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-bottom: 1rem;"
      type="button"
    >
      Show filters
    </button>
    <br />
    <br />
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="admin-users__card"
          href="/admin/users?highlight=new"
          role="button"
          style="text-decoration: none;"
        >
          <div
            class="card"
          >
            <div
              class="card__background"
              style="background-image: url(null);"
            />
            <div
              class="card__outer-container card__outer-container--padded"
            >
              <div
                class="typography__main typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography--no-padding"
                  id="new-+"
                >
                  New +
                </h2>
              </div>
            </div>
            <div
              class="card__banner"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with initial state 1`] = `
<div>
  <div
    class="loading-cover__outer-container"
  >
    <div
      class="loading-cover__overlay"
    >
      <div
        class=""
      >
        <div
          class="skeleton__outer skeleton__section"
        >
          <div
            class="skeleton__shimmer"
            style="margin-left: -0px;"
          />
        </div>
        <div
          class="skeleton__outer skeleton__card--compact"
        >
          <div
            class="skeleton__shimmer"
            style="margin-left: -0px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with loadError 1`] = `
<div>
  <div>
    <a
      class="typography__main typography__link typography__link--text-link typography--no-padding typography--inline page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section page-title__section--with-link"
        id="admin-users"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      Reload users
    </button>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-bottom: 1rem;"
      type="button"
    >
      Show filters
    </button>
    <br />
    <br />
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="admin-users__card"
          href="/admin/users?highlight=new"
          role="button"
          style="text-decoration: none;"
        >
          <div
            class="card"
          >
            <div
              class="card__background"
              style="background-image: url(null);"
            />
            <div
              class="card__outer-container card__outer-container--padded"
            >
              <div
                class="typography__main typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography--no-padding"
                  id="new-+"
                >
                  New +
                </h2>
              </div>
            </div>
            <div
              class="card__banner"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
  <span
    class="typography__main typography__paragraph"
  >
    Could not load users
  </span>
  <br />
  <span
    class="typography__main typography__paragraph"
  >
    Something went wrong
  </span>
</div>
`;

exports[`<AdminUsers /> should render correctly with loading=true 1`] = `
<div>
  <div>
    <a
      class="typography__main typography__link typography__link--text-link typography--no-padding typography--inline page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section page-title__section--with-link"
        id="admin-users"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--disabled button__outer--large"
      disabled=""
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      Reload users
    </button>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-bottom: 1rem;"
      type="button"
    >
      Show filters
    </button>
    <br />
    <br />
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="admin-users__card"
          href="/admin/users?highlight=new"
          role="button"
          style="text-decoration: none;"
        >
          <div
            class="card"
          >
            <div
              class="card__background"
              style="background-image: url(null);"
            />
            <div
              class="card__outer-container card__outer-container--padded"
            >
              <div
                class="typography__main typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography--no-padding"
                  id="new-+"
                >
                  New +
                </h2>
              </div>
            </div>
            <div
              class="card__banner"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with removeError 1`] = `
<div>
  <div>
    <a
      class="typography__main typography__link typography__link--text-link typography--no-padding typography--inline page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section page-title__section--with-link"
        id="admin-users"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      Reload users
    </button>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-bottom: 1rem;"
      type="button"
    >
      Show filters
    </button>
    <br />
    <br />
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="admin-users__card"
          href="/admin/users?highlight=new"
          role="button"
          style="text-decoration: none;"
        >
          <div
            class="card"
          >
            <div
              class="card__background"
              style="background-image: url(null);"
            />
            <div
              class="card__outer-container card__outer-container--padded"
            >
              <div
                class="typography__main typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography--no-padding"
                  id="new-+"
                >
                  New +
                </h2>
              </div>
            </div>
            <div
              class="card__banner"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with removing=true 1`] = `
<div>
  <div>
    <a
      class="typography__main typography__link typography__link--text-link typography--no-padding typography--inline page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section page-title__section--with-link"
        id="admin-users"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      Reload users
    </button>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-bottom: 1rem;"
      type="button"
    >
      Show filters
    </button>
    <br />
    <br />
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="admin-users__card"
          href="/admin/users?highlight=new"
          role="button"
          style="text-decoration: none;"
        >
          <div
            class="card"
          >
            <div
              class="card__background"
              style="background-image: url(null);"
            />
            <div
              class="card__outer-container card__outer-container--padded"
            >
              <div
                class="typography__main typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography--no-padding"
                  id="new-+"
                >
                  New +
                </h2>
              </div>
            </div>
            <div
              class="card__banner"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with requestError 1`] = `
<div>
  <div>
    <a
      class="typography__main typography__link typography__link--text-link typography--no-padding typography--inline page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section page-title__section--with-link"
        id="admin-users"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      Reload users
    </button>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-bottom: 1rem;"
      type="button"
    >
      Show filters
    </button>
    <br />
    <br />
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="admin-users__card"
          href="/admin/users?highlight=new"
          role="button"
          style="text-decoration: none;"
        >
          <div
            class="card"
          >
            <div
              class="card__background"
              style="background-image: url(null);"
            />
            <div
              class="card__outer-container card__outer-container--padded"
            >
              <div
                class="typography__main typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography--no-padding"
                  id="new-+"
                >
                  New +
                </h2>
              </div>
            </div>
            <div
              class="card__banner"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with requesting=true 1`] = `
<div>
  <div>
    <a
      class="typography__main typography__link typography__link--text-link typography--no-padding typography--inline page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section page-title__section--with-link"
        id="admin-users"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      Reload users
    </button>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-bottom: 1rem;"
      type="button"
    >
      Show filters
    </button>
    <br />
    <br />
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="admin-users__card"
          href="/admin/users?highlight=new"
          role="button"
          style="text-decoration: none;"
        >
          <div
            class="card"
          >
            <div
              class="card__background"
              style="background-image: url(null);"
            />
            <div
              class="card__outer-container card__outer-container--padded"
            >
              <div
                class="typography__main typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography--no-padding"
                  id="new-+"
                >
                  New +
                </h2>
              </div>
            </div>
            <div
              class="card__banner"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with updateError 1`] = `
<div>
  <div>
    <a
      class="typography__main typography__link typography__link--text-link typography--no-padding typography--inline page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section page-title__section--with-link"
        id="admin-users"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      Reload users
    </button>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-bottom: 1rem;"
      type="button"
    >
      Show filters
    </button>
    <br />
    <br />
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="admin-users__card"
          href="/admin/users?highlight=new"
          role="button"
          style="text-decoration: none;"
        >
          <div
            class="card"
          >
            <div
              class="card__background"
              style="background-image: url(null);"
            />
            <div
              class="card__outer-container card__outer-container--padded"
            >
              <div
                class="typography__main typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography--no-padding"
                  id="new-+"
                >
                  New +
                </h2>
              </div>
            </div>
            <div
              class="card__banner"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with updating=true 1`] = `
<div>
  <div>
    <a
      class="typography__main typography__link typography__link--text-link typography--no-padding typography--inline page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section page-title__section--with-link"
        id="admin-users"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      Reload users
    </button>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-bottom: 1rem;"
      type="button"
    >
      Show filters
    </button>
    <br />
    <br />
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="admin-users__card"
          href="/admin/users?highlight=new"
          role="button"
          style="text-decoration: none;"
        >
          <div
            class="card"
          >
            <div
              class="card__background"
              style="background-image: url(null);"
            />
            <div
              class="card__outer-container card__outer-container--padded"
            >
              <div
                class="typography__main typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography--no-padding"
                  id="new-+"
                >
                  New +
                </h2>
              </div>
            </div>
            <div
              class="card__banner"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with user 1`] = `
<div>
  <div
    class="typography__main"
  >
    <h1
      class="typography__text typography__text--section"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="typography__main typography__paragraph"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="typography__main typography__link typography__link--text-link typography--no-padding typography--inline"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with users 1`] = `
<div>
  <div>
    <a
      class="typography__main typography__link typography__link--text-link typography--no-padding typography--inline page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section page-title__section--with-link"
        id="admin-users"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-right: 1rem; margin-bottom: 1rem;"
      type="button"
    >
      Reload users
    </button>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large"
      style="margin-bottom: 1rem;"
      type="button"
    >
      Show filters
    </button>
    <br />
    <br />
  </div>
  <br />
  <span
    class="typography__main typography__paragraph"
  >
    Showing 
    3
     of 
    3
     users
  </span>
  <br />
  <br />
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="admin-users__card"
          href="/admin/users?highlight=new"
          role="button"
          style="text-decoration: none;"
        >
          <div
            class="card"
          >
            <div
              class="card__background"
              style="background-image: url(null);"
            />
            <div
              class="card__outer-container card__outer-container--padded"
            >
              <div
                class="typography__main typography--no-padding"
              >
                <h2
                  class="typography__text typography__text--subsection typography--no-padding"
                  id="new-+"
                >
                  New +
                </h2>
              </div>
            </div>
            <div
              class="card__banner"
            />
          </div>
        </a>
        <a
          class="admin-users__card"
          href="/admin/users?highlight=1"
          id="1"
          role="button"
          style="text-decoration: none;"
        >
          <div
            class="card"
          >
            <div
              class="card__background"
              style="background-image: url(null);"
            />
            <div
              class="card__outer-container card__outer-container--padded"
            >
              <div
                class="typography__main"
              >
                <h2
                  class="typography__text typography__text--subsection"
                  id="name"
                >
                  name
                </h2>
                <span
                  class="typography__main typography__paragraph"
                >
                  id: 
                  1
                </span>
              </div>
            </div>
            <div
              class="card__banner"
            />
          </div>
        </a>
        <a
          class="admin-users__card"
          href="/admin/users?highlight=2"
          id="2"
          role="button"
          style="text-decoration: none;"
        >
          <div
            class="card"
          >
            <div
              class="card__background"
              style="background-image: url(null);"
            />
            <div
              class="card__outer-container card__outer-container--padded"
            >
              <div
                class="typography__main"
              >
                <h2
                  class="typography__text typography__text--subsection"
                  id="another"
                >
                  another
                </h2>
                <span
                  class="typography__main typography__paragraph"
                >
                  id: 
                  2
                </span>
              </div>
            </div>
            <div
              class="card__banner"
            />
          </div>
        </a>
        <a
          class="admin-users__card"
          href="/admin/users?highlight=3"
          id="3"
          role="button"
          style="text-decoration: none;"
        >
          <div
            class="card"
          >
            <div
              class="card__background"
              style="background-image: url(null);"
            />
            <div
              class="card__outer-container card__outer-container--padded"
            >
              <div
                class="typography__main"
              >
                <h2
                  class="typography__text typography__text--subsection"
                  id="a-third"
                >
                  a third
                </h2>
                <span
                  class="typography__main typography__paragraph"
                >
                  id: 
                  3
                </span>
              </div>
            </div>
            <div
              class="card__banner"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
